# streamlit-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  server.json
.github/workflows/: docs.yml  release.yml  test.yml
arena/: README.md  __init__.py  agents.py  cli.py  env.py  leaderboard.py  llm.py  mcp_env.py  registry.py  report.py  runner.py  task.py
arena/tasks/budget_split/: app.py  task.py
arena/tasks/checkout_flow/: app.py  task.py
arena/tasks/clamp_to_max/: app.py  task.py
arena/tasks/dashboard_filter/: app.py  task.py
arena/tasks/discount_target/: app.py  task.py
arena/tasks/max_bid/: app.py  task.py
arena/tasks/settings_panel/: app.py  task.py
arena/tasks/signup_flow/: app.py  task.py
arena/tasks/wizard_branching/: app.py  task.py
arena/tests/: test_llm_agent.py  test_mcp.py  test_smoke.py
arena/tests/fixtures/: semantic_app.py
docs/: changelog.md  dynamic-layout.md  index.md  live.md  security.md  usage.md
examples/: dynamic_app.py  live_app.py
src/streamlit_mcp/: __init__.py  cli.py  decorator.py  elements.py  engine.py  guardrails.py  live.py  runtime.py  server.py  session.py
tests/: test_cli.py  test_decorator.py  test_docs_conformance.py  test_elements.py  test_engine.py  test_guardrails.py  test_live.py  test_release_fixes.py  test_runtime.py  test_server.py  test_session.py  test_surface_parity.py
tests/apps/: raises_app.py  sample_app.py  semantic_app.py  unsupported_app.py
